@@ -1,3 +1,4 @@
+VisitorsCompatibility
 VisitorsList
 VisitorsString
 VisitorsPlugin
